--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ background-position:center;
     font-family:'Montserrat';
     color:#717171;
     padding: 22px 18px;
-    border: 1px solid #ebebeb;
+    border: 2px solid #ebebeb;
     cursor:pointer;
 }
 .filter_list_item:hover,.filter_list_item_active{
@@ -1095,7 +1095,7 @@ background-position:center;
     margin-top:15px;
     height:50px;
     border:2px solid #dce6e4;
-    padding:20px;
+    padding:10px 20px;
     font-size:0.85em;
     font-family:'Montserrat';
         font-weight:300;
